Refactor getProjects.
